@@ -1,5 +1,7 @@
 2015-05-20	Daniel Hawkins
 	* lib/artifacts: Adjusted several item messages for clarity and grammar.
+    * server/c_object.c: Don't show item story (msg) unless it has been
+    identified.
 
 2015-05-19	Daniel Hawkins (SilverNexus)
 	* test/toolkit/toolkit_crossedit.c: Retired old crossedit test toolkit.
